# minicode

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  performance.md
docs/superpowers/plans/: 2026-06-17-minicode-implementation-plan.md
samples/calculator/: test_calculator.py
scripts/: md2docx.py  md2pdf.py
src/: main.py
src/agents/: bug_locator.py  patch_generator.py  test_verifier.py
src/api/: __init__.py  routes.py  schemas.py  server.py
src/config/: settings.py
src/core/: exceptions.py  state.py  types.py
src/engine/context_compressor/: decompressor.py  hierarchical.py  summarizer.py
src/engine/memory/: consolidator.py  episodic.py  procedural.py
src/engine/orchestrator/: coordinator.py  permission.py
src/engine/prompt_cache/: __init__.py  cache_manager.py  content_addressed.py
src/engine/safety/: human_in_loop.py  validator.py
src/evaluation/: __init__.py  benchmark.py  metrics.py
src/llm/: deepseek_client.py  prompt_templates.py  tool_parser.py
src/observability/: tracer.py
src/orchestration/: graph.py  react_loop.py
src/storage/: postgres.py  redis_client.py  vector_utils.py
src/utils/: embedding.py  logger.py  text.py
tests/: conftest.py
tests/e2e/: test_full_pipeline.py
tests/integration/: test_orchestration.py  test_real_agent.py  test_storage.py
tests/unit/: test_context_compressor.py  test_deepseek_client.py  test_memory.py  test_orchestrator.py  test_prompt_cache.py  test_safety.py  test_skill_registry.py  test_skill_router.py
(+13 files in other folders)
